--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.0.2",
+    "jquery": "^3.6.0",
+    "ngx-pagination": "^6.0.1",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~6.6.0",
+    "save": "^2.5.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
